[package]
name = "ssh-agent-filter-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["net", "rt-multi-thread", "macros", "io-util", "sync", "process", "time"] }
clap = { version = "4.5", features = ["derive"] }
base64 = { version = "0.22" }
md5 = { version = "0.7" }
hex = { version = "0.4" }

[[bin]]
name = "ssh-agent-filter"
path = "src/main.rs"

[[bin]]
name = "afssh"
path = "src/bin/afssh.rs"
