[package]
name = "ssh-agent-filter-rust"
version = "0.1.2"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
tokio = { version = "1.38", features = ["net", "rt-multi-thread", "macros", "io-util", "sync", "process", "time"] }
clap = { version = "4.5", features = ["derive"] }
base64 = { version = "0.22" }
md5 = { version = "0.7" }
hex = { version = "0.4" }

[[bin]]
name = "ssh-agent-filter"
path = "src/ssh-agent-filter.rs"

[[bin]]
name = "afssh"
path = "src/afssh.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
